# SRT_PROJECT

./: CMakeLists.txt
include/: ad_replacer.h  scte35_detector.h  srt_receiver.h  stream_output.h
src/: ad_replacer.cpp  main.cpp  scte35_detector.cpp  srt_receiver.cpp  stream_output.cpp
